# bevy_spacetimedb

./: Cargo.toml
bevy_spacetimedb/: Cargo.toml
bevy_spacetimedb/src/: lib.rs  messages.rs  plugin.rs  tables.rs
macros/src/: lib.rs
