[package]
name = "bevy_spacetimedb"
description = "Use SpacetimeDB in your Bevy application"
repository = "https://github.com/JulienLavocat/bevy_spacetimedb"
readme = "../README.md"
version = "0.7.2"
edition = "2024"
license = "Apache-2.0"

[features]
default = ["macros"]
macros = ["dep:bevy_spacetimedb_macros"]

[dependencies]
spacetimedb-sdk = { workspace = true }
bevy = { workspace = true }
bevy_spacetimedb_macros = { git = "https://github.com/r3ddr4gOn/bevy_spacetimedb", rev = "f822d42e48dbefed2d2fca76671af761340b4b0b", optional = true }

[[example]]
name = "bevy_spacetimedb"
path = "../examples/bevy_spacetimedb.rs"
